--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,24 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/showPlayer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#DDD7D7"
+        android:gravity="top|center_horizontal"
+        android:padding="20dp"
+        android:text="Показать плеер"
+        android:textColor="#000000"
+        android:textSize="32sp" />
+
     <com.google.android.exoplayer2.ui.StyledPlayerView
         android:id="@+id/exo_player_view"
         android:layout_width="match_parent"
         android:paddingHorizontal="15dp"
         android:layout_gravity="center"
         android:background="@color/cardview_shadow_end_color"
+        android:visibility="gone"
         android:layout_height="240dp" />
 
 </FrameLayout>
